# HalfPipe2Bids

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/: spec.json
data/atlas/: atlas-Schaefer2018Combined_dseg.tsv
data/derivatives/fmriprep/sub-10159/func/: .~lock.sub-10159_task-rest_desc-confounds_timeseries.tsv#  sub-10159_task-rest_desc-confounds_timeseries.json  sub-10159_task-rest_desc-confounds_timeseries.tsv
data/derivatives/fmriprep/sub-10171/func/: sub-10171_task-rest_desc-confounds_timeseries.json  sub-10171_task-rest_desc-confounds_timeseries.tsv
data/derivatives/fmriprep/sub-10189/func/: sub-10189_task-rest_desc-confounds_timeseries.json  sub-10189_task-rest_desc-confounds_timeseries.tsv
data/derivatives/fmriprep/sub-10206/func/: sub-10206_task-rest_desc-confounds_timeseries.json  sub-10206_task-rest_desc-confounds_timeseries.tsv
data/derivatives/fmriprep/sub-10217/func/: sub-10217_task-rest_desc-confounds_timeseries.json  sub-10217_task-rest_desc-confounds_timeseries.tsv
data/derivatives/fmriprep/sub-10225/func/: sub-10225_task-rest_desc-confounds_timeseries.json  sub-10225_task-rest_desc-confounds_timeseries.tsv
data/derivatives/fmriprep/sub-10227/func/: sub-10227_task-rest_desc-confounds_timeseries.json  sub-10227_task-rest_desc-confounds_timeseries.tsv
data/derivatives/fmriprep/sub-10228/func/: sub-10228_task-rest_desc-confounds_timeseries.json  (+1 more)
draft/: test.ipynb
halfpipe2bids/: __init__.py  main.py  utils.py
halfpipe2bids/tests/: test_cli.py
halfpipe2bids/tests/data/: README.md
src/: cleaner.py  main.py  preprocessor.py
(+198 files in other folders)
