[project]
name = "halfpipe2bids"
description = "Rename files from HalfPipe to BIDS BEP017 convention."
readme = "README.md"
authors = [
    { name = "Pierre Bergeret", email = "pierre.bergeret12@gmail.com" },
]
requires-python = ">=3.11"
license = { file="LICENSE" }
dependencies = [
    "matplotlib>=3.10.3",
    "nilearn>=0.11.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pip>=25.1.1",
]
dynamic = ["version"]

[project.scripts]
halfpipe2bids = "halfpipe2bids.main:main"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pre-commit",
  "halfpipe2bids[test]",
  'tox',
  'types-setuptools',
  'pandas-stubs',
  'types-tqdm'
]
test = [
  "pytest",
  "pytest-cov",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["halfpipe2bids"]
exclude = [
  ".github",
  "halfpipe2bids/tests/data"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "halfpipe2bids/_version.py"
fallback-version = "0.0.0+ci"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.black]
target-version = ['py38']
exclude = "giga_connectome/_version.py"
line-length = 79


[tool.setuptools_scm]
fallback-version = "0.0.0+ci"

[tool.pytest.ini_options]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
testpaths = ["test"]
addopts = ["-ra", "--strict-config", "--strict-markers", "--doctest-modules", "-v"]
markers = [
    "smoke: smoke tests that will run on a downsampled real dataset (deselect with '-m \"not smoke\"')",
]
# filterwarnings = ["error"]
